Developing the application framework
- Adding styles
- Body framework
- Adding ontent, header

--- a/TestNG2WithCore2/TestNG2WithCore2/src/app/app.component.html
+++ b/TestNG2WithCore2/TestNG2WithCore2/src/app/app.component.html
@@ -1,7 +1,1 @@
-﻿<h1>Demonstration of Angular 2 with .Net Core</h1>
-
-<ul>
-  <li *ngFor="let value of apiValues">{{value}}</li>
-</ul>
-
-<hr />
+﻿<fw-framework-body></fw-framework-body>
