--- a/TestNG2WithCore2/TestNG2WithCore2/src/fw/title-bar/title-bar.component.html
+++ b/TestNG2WithCore2/TestNG2WithCore2/src/fw/title-bar/title-bar.component.html
@@ -1,8 +1,10 @@
 ﻿<div  class="title-bar">
   <img src="assets/logo.png" alt="Green Nations Logo">
   <div class="menu-area">
-    <!--<fw-top-bar>
-    </fw-top-bar-->>
+    
+    <fw-top-bar>
+
+    </fw-top-bar>
     <!--<fw-menu *ngIf="!menuService.isVertical">
     </fw-menu>-->
   </div>
