Revert "Conmplete Angular 4 with Core project"
This reverts commit b73e2461a755b33b3fcecf4f54305032699f3939.

--- a/TestNG2WithCore2/TestNG2WithCore2/src/fw/title-bar/title-bar.component.html
+++ b/TestNG2WithCore2/TestNG2WithCore2/src/fw/title-bar/title-bar.component.html
@@ -1,10 +1,8 @@
 ﻿<div  class="title-bar">
   <img src="assets/logo.png" alt="Green Nations Logo">
   <div class="menu-area">
-    
-    <fw-top-bar>
-
-    </fw-top-bar>
+    <!--<fw-top-bar>
+    </fw-top-bar-->>
     <!--<fw-menu *ngIf="!menuService.isVertical">
     </fw-menu>-->
   </div>
