Selection checkbox functionality added
Selection checkbox functionality added

--- a/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/star.component.html
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/star.component.html
@@ -1,7 +1,8 @@
-﻿<div class="crop"
+﻿<div class="crop" style="line-height:1"
      [style.width.px]="starWidth"
      [title]="rating">
-    <div style="width: 86px">
+    <div
+        [style.width.px]="starWidth">
         <span class="glyphicon glyphicon-star"></span>
         <span class="glyphicon glyphicon-star"></span>
         <span class="glyphicon glyphicon-star"></span>
