--- a/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/navmenu/navmenu.component.html
@@ -32,6 +32,11 @@
                         <span class='glyphicon glyphicon-education'></span> Members
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/invitation']">
+                        <span class='glyphicon glyphicon-th-list'></span> Invitation
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
