--- a/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/progress/progress.component.html
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/progress/progress.component.html
@@ -1,12 +1,7 @@
-﻿<div class="crop"
+﻿<div class="progress-bar progress-bar-striped bg-success"
      [style.width.px]="starWidth"
-     [style.backgroundcolor]=""
+     
      [title]="rating"
      (click)="onClick()" >
-    <div class="progress" style="width:86px">
-        
-            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        
-        <!--<span class="progress-bar"></span>-->
-    </div>
+    
 </div>
