--- a/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/progress/progress.component.html
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/progress/progress.component.html
@@ -1,7 +1,14 @@
-﻿<div class="progress-bar progress-bar-striped bg-success"
+﻿<!--<div id="progress" class="progress-bar bg-danger"
      [style.width.px]="starWidth"
-     
      [title]="rating"
-     (click)="onClick()" >
-    
+     (click)="onClick()">
+
+    <div class="progress"></div>
+</div>-->
+
+
+<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+     [style.width.px]="starWidth"
+     [title]="rating">
+    <div class="progress"></div>
 </div>
