New field for Progress - completed
- New completed field to show Progress
- Progress added with percentage

--- a/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/Label/label.component.html
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/Label/label.component.html
@@ -7,4 +7,5 @@
 </div>-->
 
 <span [style.width.px]="starWidth"
-      [title]="rating">Text here</span>
+      [title]="rating"
+      [style.background-color]="bgColor">Text here</span>
