--- a/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/members-grid/members-grid.component.html
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/members-grid/members-grid.component.html
@@ -32,8 +32,8 @@
                         <th></th>
                         <th>No.</th>
                         <th>Flight No</th>
-                        <th></th>
                         <th>Service Provider</th>
+                        <th>Flight Rating</th>
                         <th>Departure time</th>
                         <th>Arrival time</th>
                         <th>Capacity</th>
@@ -42,7 +42,8 @@
                         <th>From city</th>
                         <th>To city</th>
                         <th>Flight Class</th>
-                        <th>Flight Rating</th>
+                        <th>Progress</th>
+                        <th>Tags</th>
                     </tr>
                 </thead>
                 <tr>
@@ -50,6 +51,7 @@
                     <th>No.</th>
                     <th>Flight No</th>
                     <th><input type='text' [(ngModel)]='listFilter' /></th>
+                    <th>Flight Rating</th>
                     <th>Departure time</th>
                     <th>Arrival time</th>
                     <th>Capacity</th>
@@ -58,13 +60,18 @@
                     <th>From city</th>
                     <th>To city</th>
                     <th>Flight Class</th>
-                    <th>Flight Rating</th>
+                    <th>Progress</th>
+                    <th>Tags</th>
                 </tr>
                 <tr *ngFor="let flight of flights$">
                     <td style="text-align:center"><input type="checkbox" id="chkSelected" /></td>
                     <td style="text-align:center">{{flight.flightId}}</td>
                     <td>{{flight.flightNo | uppercase }}</td>
                     <td>{{flight.serviceProvider | convertToCaps: 'flight.serviceProvider'}}</td>
+                    <td width="100px">
+                        <Grid-star [rating]='flight.flightRating'
+                                   (ratingClicked)='onRatingClicked($event)'></Grid-star>
+                    </td>
                     <td>{{flight.startTime}}</td>
                     <td>{{flight.endTime}}</td>
                     <td>{{flight.passengerCapacity}}</td>
@@ -75,18 +82,15 @@
                     <td>{{flight.departureCity}}</td>
                     <td>{{flight.arrivalCity}}</td>
                     <td style="color:darkgoldenrod;">{{flight.flightClass}}</td>
-                    <td>
-                        <Grid-progress-bar [rating]='flight.flightRating'
+                    <td width="100px">
+                        <Grid-progress-bar [completed]='flight.completed'
                                            (ratingClicked)='onRatingClicked($event)'></Grid-progress-bar>
                     </td>
                     <td>
                         <Grid-badge [rating]='flight.flightRating'
                                     (ratingClicked)='onRatingClicked($event)'></Grid-badge>
                     </td>
-                    <td>
-                        <Grid-star [rating]='flight.flightRating'
-                                   (ratingClicked)='onRatingClicked($event)'></Grid-star>
-                    </td>
+                    
                 </tr>
             </table>
         </div>
