--- a/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/progress/progress.component.html
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/progress/progress.component.html
@@ -6,9 +6,8 @@
     <div class="progress"></div>
 </div>-->
 
-
-<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
-     [style.width.px]="starWidth"
-     [title]="rating">
+<div [className]='progressClass' role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+     [style.width.px]="progressWidth"
+     [title]="completed">
     <div class="progress"></div>
 </div>
