--- a/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/Label/label.component.html
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/ClientApp/app/components/shared/Label/label.component.html
@@ -6,6 +6,6 @@
     <div class="progress"></div>
 </div>-->
 
-<span [style.width.px]="starWidth"
-      [title]="rating"
-      [style.background-color]="bgColor">Text here</span>
+<div>
+    <span [className]='lookupClass' role="alert">{{lookup}}</span>
+</div>
