--- a/AngularWithCore2Demo/Empty-coreui/src/app/views/dashboard/dashboard.component.html
+++ b/AngularWithCore2Demo/Empty-coreui/src/app/views/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
+<style>
+  .crop {
+    overflow: hidden;
+  }
+</style>
 <div class="animated fadeIn">
   <!--/.card-->
   <div class="row">
@@ -232,21 +237,30 @@
           <table class="table table-striped table-responsive-sm table-hover table-outline mb-0">
             <thead class="thead-light">
               <tr>
+                <th>#</th>
                 <th class="text-center"><i class="icon-people"></i></th>
                 <th>User</th>
                 <th class="text-center">Country</th>
                 <th>Usage</th>
                 <th class="text-center">Payment Method</th>
+                <th>Progress</th>
+                <th>Rating</th>
+                <th>Note</th>
                 <th>Activity</th>
+                <th>Change</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td class="text-center">
-                  <div class="avatar">
-                    <img src="assets/img/avatars/1.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-                    <span class="avatar-status badge-success"></span>
+                <td>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="option1" id="checkbox1">
+                    <label class="form-check-label" for="checkbox1">
+                    </label>
                   </div>
+                </td>
+                <td class="text-center">
+                  <Grid-avatar></Grid-avatar>
                 </td>
                 <td>
                   <div>Yiorgos Avraamu</div>
@@ -274,11 +288,49 @@
                   <i class="fa fa-cc-mastercard" style="font-size:24px"></i>
                 </td>
                 <td>
+                  <div class="progress-group-bars">
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-info" role="progressbar" style="width: 46%" aria-valuenow="46" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-danger" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="crop" style="color:forestgreen;width:25px">
+                    <div style="width:86px">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  This is a testing only and will not be recorded
+                </td>
+                <td>
                   <div class="small text-muted">Last login</div>
                   <strong>10 sec ago</strong>
                 </td>
+                <td>
+                  <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                    <i class="fa fa-level-down fa-lg mt-4"></i>
+                  </div>
+
+                  <strong style="float:left">10</strong>
+                </td>
               </tr>
               <tr>
+                <td>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="option1" id="checkbox1">
+                    <label class="form-check-label" for="checkbox1">
+                    </label>
+                  </div>
+                </td>
                 <td class="text-center">
                   <div class="avatar">
                     <img src="assets/img/avatars/2.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
@@ -312,11 +364,42 @@
                   <i class="fa fa-cc-visa" style="font-size:24px"></i>
                 </td>
                 <td>
+                  <div class="progress-group-bars">
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-info" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-danger" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="crop" style="color:forestgreen;width:35px">
+                    <div style="width:86px">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  This is a testing only and will not be recorded
+                </td>
+                <td>
                   <div class="small text-muted">Last login</div>
                   <strong>5 minutes ago</strong>
                 </td>
               </tr>
               <tr>
+                <td>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="option1" id="checkbox1">
+                    <label class="form-check-label" for="checkbox1">
+                    </label>
+                  </div>
+                </td>
                 <td class="text-center">
                   <div class="avatar">
                     <img src="assets/img/avatars/3.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
@@ -349,11 +432,42 @@
                   <i class="fa fa-cc-stripe" style="font-size:24px"></i>
                 </td>
                 <td>
+                  <div class="progress-group-bars">
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-info" role="progressbar" style="width: 28%" aria-valuenow="28" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-danger" role="progressbar" style="width: 78%" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="crop" style="color:forestgreen;width:45px">
+                    <div style="width:86px">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  This is a testing only and will not be recorded
+                </td>
+                <td>
                   <div class="small text-muted">Last login</div>
                   <strong>1 hour ago</strong>
                 </td>
               </tr>
               <tr>
+                <td>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="option1" id="checkbox1">
+                    <label class="form-check-label" for="checkbox1">
+                    </label>
+                  </div>
+                </td>
                 <td class="text-center">
                   <div class="avatar">
                     <img src="assets/img/avatars/4.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
@@ -386,11 +500,42 @@
                   <i class="fa fa-paypal" style="font-size:24px"></i>
                 </td>
                 <td>
+                  <div class="progress-group-bars">
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-info" role="progressbar" style="width: 64%" aria-valuenow="64" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-danger" role="progressbar" style="width: 58%" aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="crop" style="color:forestgreen;width:60px">
+                    <div style="width:86px">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  This is a testing only and will not be recorded
+                </td>
+                <td>
                   <div class="small text-muted">Last login</div>
                   <strong>Last month</strong>
                 </td>
               </tr>
               <tr>
+                <td>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="option1" id="checkbox1">
+                    <label class="form-check-label" for="checkbox1">
+                    </label>
+                  </div>
+                </td>
                 <td class="text-center">
                   <div class="avatar">
                     <img src="assets/img/avatars/5.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
@@ -423,11 +568,42 @@
                   <i class="fa fa-google-wallet" style="font-size:24px"></i>
                 </td>
                 <td>
+                  <div class="progress-group-bars">
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-info" role="progressbar" style="width: 34%" aria-valuenow="34" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-danger" role="progressbar" style="width: 78%" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="crop" style="color:forestgreen;width:25px">
+                    <div style="width:86px">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  This is a testing only and will not be recorded
+                </td>
+                <td>
                   <div class="small text-muted">Last login</div>
                   <strong>Last week</strong>
                 </td>
               </tr>
               <tr>
+                <td>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="option1" id="checkbox1">
+                    <label class="form-check-label" for="checkbox1">
+                    </label>
+                  </div>
+                </td>
                 <td class="text-center">
                   <div class="avatar">
                     <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
@@ -458,6 +634,30 @@
                 </td>
                 <td class="text-center">
                   <i class="fa fa-cc-amex" style="font-size:24px"></i>
+                </td>
+                <td>
+                  <div class="progress-group-bars">
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-info" role="progressbar" style="width: 44%" aria-valuenow="44" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="progress progress-xs">
+                      <div class="progress-bar bg-danger" role="progressbar" style="width: 68%" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="crop" style="color:forestgreen;width:15px">
+                    <div style="width:86px">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  This is a testing only and will not be recorded
                 </td>
                 <td>
                   <div class="small text-muted">Last login</div>
