New datatable grid controls
- Renaming dashboard to grid link
- Moving components to grid folder

--- a/AngularWithCore2Demo/Empty-coreui/src/app/views/dashboard/dashboard.component.html
+++ b/AngularWithCore2Demo/Empty-coreui/src/app/views/dashboard/dashboard.component.html
@@ -298,15 +298,7 @@
                   </div>
                 </td>
                 <td>
-                  <div class="crop" style="color:forestgreen;width:25px">
-                    <div style="width:86px">
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star"></span>
-                    </div>
-                  </div>
+                  <Grid-star [rating]='1'></Grid-star>
                 </td>
                 <td>
                   This is a testing only and will not be recorded
@@ -332,10 +324,7 @@
                   </div>
                 </td>
                 <td class="text-center">
-                  <div class="avatar">
-                    <img src="assets/img/avatars/2.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-                    <span class="avatar-status badge-danger"></span>
-                  </div>
+                  <Grid-avatar></Grid-avatar>
                 </td>
                 <td>
                   <div>Avram Tarasios</div>
