--- a/AngularWithCore2Demo/Empty-coreui/src/app/views/dashboard/dashboard.component.html
+++ b/AngularWithCore2Demo/Empty-coreui/src/app/views/dashboard/dashboard.component.html
@@ -272,17 +272,7 @@
                   <i class="flag-icon flag-icon-us h4 mb-0" title="us" id="us"></i>
                 </td>
                 <td>
-                  <div class="clearfix">
-                    <div class="float-left">
-                      <strong>50%</strong>
-                    </div>
-                    <div class="float-right">
-                      <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
-                    </div>
-                  </div>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                  <Grid-progress></Grid-progress>
                 </td>
                 <td class="text-center">
                   <i class="fa fa-cc-mastercard" style="font-size:24px"></i>
